# telegram-furniture-bot

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.json  requirements.txt
app/: __init__.py  config.py  main.py
app/database/: __init__.py  models.py  repositories.py  session.py
app/handlers/: __init__.py  catalog.py  common.py  order.py  questions.py  start.py
app/keyboards/: __init__.py  catalog.py  main.py  order.py
app/services/: __init__.py  catalog.py  notifications.py  orders.py  pricing.py
app/states/: __init__.py  order.py
app/texts/: __init__.py  messages.py
app/utils/: __init__.py  formatting.py  order_numbers.py
data/: products.json
tests/: test_catalog.py  test_database.py  test_integration.py
